# social_media_backend

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  extensions.py  schemas.py  test_config.py
app/cli/: __init__.py  seed.py
app/models/: post.py  user.py
app/routes/: auth.py  posts.py  users.py
docs/auth/: login.yml  refresh.yml  register.yml
docs/posts/: create_post.yml  delete_post.yml  edit_post.yml  get_post.yml  get_user_posts.yml
docs/users/: edit_current_user.yml  get_current_user.yml  get_user.yml
migrations/: 1768228835_moving_to_flask_sqlalchemy_lite_and_.py  1768408958_create_post_model.py  1768495715_updated_at_user_model.py
migrations/versions/: 1e34265dbb79_develop_user_model.py
tests/: conftest.py  test_auth.py  test_posts.py  test_users.py  utils.py
